# apigee-client

./: .gitignore  CHANGELOG.md  LICENCE  README.md  project.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
apigee_sdk/: caches_client.py  developer_app_client.py  developers_client.py  keystores_client.py  kvm_client.py  products_client.py  proxy_client.py  shared_flows_client.py  user_roles_client.py  users_client.py
cli/: __init__.py  proxy_cli.py
tests/: test_caches_client.py  test_developer_app_client.py  test_developers_client.py  test_keystores_client.py  test_kvm_client.py  test_products_client.py  test_proxy_cli.py  test_proxy_client.py  test_shared_flows_client.py  test_user_roles_client.py  test_users_client.py
