[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "apigee-client"
version = "0.0.1"
authors = [
  { name="Ken Solorzano-Farrier", email="kener.solorzano@icloud.com" },
]
description = "A Python client library for interacting with the Apigee Edge API, designed to simplify API management and integration tasks."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GNU"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/kensolfar/apigee_client"
Issues = "https://github.com/kensolfar/apigee_client/issues"

[tool.semantic_release]
repository_url = "https://test.pypi.org/legacy/"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.branches.develop]
match = "(develop|Develop)"
prerelease = true
prerelease_token = "alpha"

[tool.semantic_release.remote.token]
env = "GH_TOKEN"