[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "apigee-client"
description = "A Python SDK and CLI for interacting with the Apigee Edge Management API."
version = "0.1.0"
authors = [
  { name="Ken Solorzano-Farrier", email="kener.solorzano@icloud.com" },
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "certifi>=2025.4.26,<2026",
    "charset-normalizer>=3.4.2,<4",
    "click>=8.1.8,<9",
    "idna>=3.10,<4",
    "iniconfig>=2.1.0,<3",
    "packaging>=25.0,<26",
    "pluggy>=1.5.0,<2",
    "requests>=2.32.3,<3",
    "setuptools>=80.1.0,<81",
    "urllib3>=2.4.0,<3",
    "importlib-metadata; python_version<'3.10'"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-cov>=6.1.1,<7",
    "pytest-mock>=3.14.0,<4",
    "coverage>=7.8.0,<8"
]

[project.urls]
Homepage = "https://github.com/kensolfar/apigee_client"
Issues = "https://github.com/kensolfar/apigee_client/issues"

[project.scripts]
apigee-client = "cli.proxy_cli:cli"

[tool.setuptools]
packages = ["apigee_sdk"]

[tool.semantic_release.pypi]
repository_url = "https://test.pypi.org/legacy/"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.branches.develop]
match = "(develop|Develop)"
prerelease = true
prerelease_token = "alpha"

[tool.semantic_release.remote.token]
env = "GH_TOKEN"